bobcat (5.11.00)

  * Added members and constructors to BigInt for processing little-endian
    coded values;

  * Added class LDC (Large Digital Converter) to convert large digital values
    (as, e.g., handled by BigInt) to character representations using number
    systems from 2 through 36 or using number characters in a std::string
    using the string's length as number system.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 21 May 2022 17:37:31 +0200

bobcat (5.10.01)

  * The reverse(3bobcat) manpage was incomplete. Fixed in this release.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 17 Apr 2022 08:29:02 +0200

bobcat (5.10.00)

  * Added new class Reverse (and 'reverse' support functions) having members
    begin() and end(), returning reverse iterators for arrays, for classes
    offering begin() and end() members returning iterators, and for
    initializer_lists.

  * The const_iterators of ConfigFile, Iterator, MailHeaders, PtrIter,
    ReadlineHistory and TableSupport are not inheriting from std::iterator
    anymore as inheriting from std::iterator is deprecated.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 16 Apr 2022 13:10:00 +0200

bobcat (5.09.01) 

  * DateTime::Zone::initialize was called to initialize a static data member
    which is used by DateTime constructors. When a DateTime object is
    statically constructed initialize may not yet have been called. Fixed in
    this release

  * The -q option was removed from the 'build' script.

  * Leftover .tar.gz extensions were removed from the man-pages

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 01 Jul 2021 08:46:33 +0200

bobcat (5.09.00) 

  * unreleased: DateTime fixes (see 5.09.01) were incorrect.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 28 Jun 2021 15:32:14 +0200

bobcat (5.08.01) 

  * Fixed missing assignment of argv[0] to Arg__'s d_argv0 data member

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 May 2021 10:17:20 +0200

bobcat (5.08.00) 
