@@ -2,6 +2,16 @@
 
 void LDC::convert()
 {
+    if (size_t length = d_end - d_begin.ptr; // no length or merely a 0-value?
+            length == 0                      // then convert to a value 0
+            or
+            (length == 1 and *d_begin.valuePtr == 0)
+    )
+    {
+        d_converted.push_back('0');
+        return;
+    }
+
     while (*d_begin.valuePtr >= d_radix)   // reducible values are available
     {
         reduce();                           // reduce d_begin till all the
